--- a/eagleye_pp/eagleye_pp/config/eagleye_pp_config.yaml
+++ b/eagleye_pp/eagleye_pp/config/eagleye_pp_config.yaml
@@ -34,6 +34,7 @@ gnss:
   nmea_downsample_freq: 5
 
 imu:
+  frequency: 50
   base_link2imu:
     x: 0.0
     y: 0.0
@@ -126,6 +127,9 @@ position:
   outlier_threshold: 3.0                              #Threshold for ending estimated outlier rejection. (default:3 m)
   estimated_enu_vel_coefficient : 0.025               #A coefficient for determining the threshold for the number of valid data in the GNSS buffer to determine whether to make an estimate. (default:0.025 = 2.5%)
   estimated_position_coefficient: 0.25                #A coefficient for determining the threshold for the number of valid data in the remainder buffer to determine whether to make an estimate. (default:0.25 = 25%)
+  ecef_base_pos_x : 0.0                               #The position in the ecef coordinate system to use when converting to the enu coordinate system. If 0, the position entered for the first time when starting the program will be used as a reference.
+  ecef_base_pos_y : 0.0
+  ecef_base_pos_z : 0.0
 
 position_interpolate:
   number_time_max: 2
